[gd_scene load_steps=8 format=3 uid="uid://m2he5is8fl3f"]

[ext_resource type="Script" uid="uid://dka10ra1toe02" path="res://Scenes/gembase.gd" id="1_bti4x"]
[ext_resource type="ArrayMesh" uid="uid://26qoavyqyb55" path="res://Assets/Models/gamejamgemsgeode.obj" id="2_vgmge"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_bti4x"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6dv6r"]
albedo_color = Color(0.015872259, 0.48502564, 2.8878452e-07, 1)
metallic = 0.76
metallic_specular = 1.0
emission_enabled = true
refraction_enabled = true

[sub_resource type="Animation" id="Animation_vgmge"]
resource_name = "turn"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.21527588, -0.20204544, -0.2549709), Vector3(0.21527588, 0.6463978, -0.2549709)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.0333333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_6dv6r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.21527588, -0.20204544, -0.2549709)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mop61"]
_data = {
&"RESET": SubResource("Animation_6dv6r"),
&"turn": SubResource("Animation_vgmge")
}

[node name="GreenGem" type="Area3D" groups=["interactable"]]
script = ExtResource("1_bti4x")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_bti4x")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0.21527588, -0.20204544, -0.2549709)
mesh = ExtResource("2_vgmge")
surface_material_override/0 = SubResource("StandardMaterial3D_6dv6r")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_mop61")
}

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(-0.38250723, -0.9197543, -0.08797997, 0.27479258, -0.20415689, 0.93957937, -0.8821438, 0.33521956, 0.33083305, 0.14744487, 2.0121946, 0.17985213)
light_color = Color(0.006481034, 0.51810277, 0, 1)
light_energy = 6.53
light_indirect_energy = 7.78
light_volumetric_fog_energy = 3.64
light_specular = 16.0
